--- a/src/index.scss
+++ b/src/index.scss
@@ -2,3 +2,10 @@ body{
     margin: 0;
     font-family: "Montserrat", sans-serif;
 }
+a{
+    text-decoration: none;
+    color: black;
+}
+*{
+    box-sizing: border-box;
+}
